--- a/.github/workflows/frontend-angular-ci.yml
+++ b/.github/workflows/frontend-angular-ci.yml
@@ -28,6 +28,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run: npm run build:ci
+        run: npm run build
       - name: Test
-        run: npm run test:ci --if-present
+        run: npm run test --if-present
