--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,21 +1,8 @@
-logging:
-  level:
-    root: INFO
-
 server:
   port: 8081
+  servlet:
+    context-path: /api
 
 spring:
-  datasource:
-    hikari:
-      connection-timeout: 20000
-      maximum-pool-size: 5
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: password
-  jpa:
-    hibernate:
-      ddl-auto: validate
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+  profiles:
+    active: prod
