--- a/.github/workflows/frontend-angular-ci.yml
+++ b/.github/workflows/frontend-angular-ci.yml
@@ -16,7 +16,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./frontend/feast-orders-fe
+        working-directory: ./frontend
 
     steps:
       - name: Checkout
