Implementing Order Rest controller * Minor fixes to bean configuration * Register h2 and swagger servlet in dev mode * Added N-N jpa association between item and order

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   profiles:
-    active: prod
+    active: dev
 
 printerpoc:
   filepath: /home/rizzaccio/Documents/ferie_permessi.txt
