Implement Category Menu Item * Added API for the menu item CRUD with category * Create 1 - N association between category and menu items

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -7,5 +7,6 @@ spring:
   profiles:
     active: dev
 
+# TODO: REMOVE AFTER RC1!!!
 printerpoc:
   filepath: /home/rizzaccio/Documents/ferie_permessi.txt
