--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,3 +6,8 @@ server:
 spring:
   profiles:
     active: prod
+
+app:
+  security:
+    jwtSecret: feastBearSecretKey
+    jwtExpirationMs: 86400000
