Implement docker compose

--- a/backend/src/main/resources/application-dev-pst.yml
+++ b/backend/src/main/resources/application-dev-pst.yml
@@ -1,14 +1,14 @@
 logging:
   level:
-    root: WARN
+    root: INFO
 
 spring:
-  profiles: prod
+  profiles: devpst
   datasource:
     hikari:
       connection-timeout: 20000
       maximum-pool-size: 5
-    url: jdbc:postgresql://postgres:5432/postgres
+    url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: password
   jpa:
