--- a/.github/workflows/backend-spring-ci.yml
+++ b/.github/workflows/backend-spring-ci.yml
@@ -3,8 +3,10 @@ name: Spring Boot Backend CI
 on:
   push:
     branches: [ main ]
+    paths: 'backend/**'
   pull_request:
     branches: [ main ]
+    paths: 'backend/**'
 
 jobs:
   build:
