--- a/.github/workflows/frontend-angular-ci.yml
+++ b/.github/workflows/frontend-angular-ci.yml
@@ -6,8 +6,10 @@ name: Frontend Service CI
 on:
   push:
     branches: [ main ]
+    paths: 'frontend/**'
   pull_request:
     branches: [ main ]
+    paths: 'frontend/**'
 
 jobs:
   build:
