--- a/.github/workflows/feastbear-orders-ci.yml
+++ b/.github/workflows/feastbear-orders-ci.yml
@@ -3,8 +3,10 @@ name: FeastBear Orders Flutter CI
 on:
   push:
     branches: [ main ]
+    paths: 'mobile/orders**'
   pull_request:
     branches: [ main ]
+    paths: 'mobile/orders**'
 
 jobs:
   build-android-apk:
