--- a/.github/workflows/backend-spring-ci.yml
+++ b/.github/workflows/backend-spring-ci.yml
@@ -23,6 +23,6 @@ jobs:
         with:
           java-version: '11'
       - name: Maven Package
-        run: mvn clean package -DskipTests
+        run: mvn clean package
       - name: Maven Verify
-        run: mvn clean verify -DskipTests
+        run: mvn clean verify
