--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -6,6 +6,7 @@ spring:
   profiles: prod
   datasource:
     hikari:
+      data-source-properties: stringtype=unspecified
       connection-timeout: 20000
       maximum-pool-size: 5
     url: ${PSTURL}
@@ -13,7 +14,7 @@ spring:
     password: ${PSTPASSWORD}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
