--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,22 +2,19 @@ version: '3.1'
 services:
   backend:
     container_name: feast-orders-backend
-    image: backend
-    build: ./
-    expose:
-      - 8081
+    image: feast-orders-server
+    build:
+      context: ./
+      dockerfile: server.Dockerfile
     ports:
       - "8081:8081"
     depends_on:
       - postgres
   postgres:
-    container_name: feast-orders-database
-    image: postgres
-    expose:
-      - 5432
+    container_name: bear-db-container
+    image: bear-db
+    build:
+      context: ./
+      dockerfile: postgres.Dockerfile
     ports:
       - "5432:5432"
-    environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=postgres
-      - POSTGRES_DB=postgres
