--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "8081:8081"
     depends_on:
       - postgres
+    networks:
+      - feast-bear
   postgres:
     container_name: bear-db-container
     image: bear-db
@@ -18,3 +20,10 @@ services:
       dockerfile: postgres.Dockerfile
     ports:
       - "5432:5432"
+    volumes:
+      - $HOME/postgresql:/var/lib/postgresql
+    networks:
+      - feast-bear
+networks:
+  feast-bear:
+    driver: "bridge"
