fix spring config

--- a/backend/rest/src/main/resources/application.yml
+++ b/backend/rest/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
       enabled: always
   banner:
     location: ./banner.txt
+  main:
+    allow-bean-definition-overriding: true
 
 app:
   security:
