--- a/backend/atomic/pom.xml
+++ b/backend/atomic/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>feast-orders</artifactId>
         <groupId>be</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
