--- a/backend/business/pom.xml
+++ b/backend/business/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>feast-orders</artifactId>
         <groupId>be</groupId>
         <version>${revision}</version>
+        <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
