--- a/mobile/orders/pubspec.yaml
+++ b/mobile/orders/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   google_fonts: ^2.2.0
   auto_route: ^2.4.2
   salomon_bottom_bar: ^3.2.0
+  commons:
+    path: ../commons
 
 dev_dependencies:
   flutter_test:
