--- a/mobile/orders/pubspec.yaml
+++ b/mobile/orders/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.2.0
   auto_route: ^2.4.2
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
   salomon_bottom_bar: ^3.2.0
   commons:
     path: ../commons
