--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast-spring</artifactId>
+            <version>4.2.4</version>
+        </dependency>
 
         <!--	RUNTIME DEPENDENCIES	-->
         <dependency>
