--- a/backend/rest/src/main/resources/application-prod.yml
+++ b/backend/rest/src/main/resources/application-prod.yml
@@ -3,7 +3,10 @@ logging:
     root: INFO
 
 spring:
-  profiles: prod
+  spring:
+    config:
+      activate:
+        on-profile: prod
   datasource:
     hikari:
       data-source-properties: stringtype=unspecified
